--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "clsx": "^1.2.1",
@@ -13,7 +14,8 @@
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.32.5",
     "react-redux": "^7.2.9",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
