--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "clsx": "^1.2.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.1",
+    "react": "^18.0.0",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.0.0",
     "react-intersection-observer": "^8.32.5",
     "react-redux": "^7.2.9",
     "react-router": "^6.14.2",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
@@ -28,7 +28,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
     "typescript": "^4.9.5"
   },
