--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.4",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "17.0.0",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
+    "cypress": "^12.17.4",
+    "eslint-plugin-cypress": "^2.14.0",
+    "fetch-mock": "^9.11.0",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
